force-app/main/default/objects/Publication__c/Publication__c.object-meta.xml
<CustomObject>
    <label>Publication</label>
    <nameField>
        <label>Publication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>