force-app/main/default/objects/Publication__c/fields/Audit_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Cycle_Date__c</fullName>
    <description
  >This is the date that the audit cycle begins for the current year.</description>
    <inlineHelpText
  >This is the date that the audit cycle begins for the current year.</inlineHelpText>
    <label>Audit Cycle Date</label>
    <type>Date</type>
</CustomField>