force-app/main/default/objects/Publication__c/fields/Contact_Interest_Topics__c.field-meta.xml
<CustomField>
    <fullName>Contact_Interest_Topics__c</fullName>
    <label>Contact Interest Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Interest_Topics</valueSetName>
    </valueSet>
</CustomField>